# ardesia

./: .gitignore  CMakeLists.txt  build.sh  config.h.in  config_default.cmake
src/: annotation_window.c  annotation_window.h  annotation_window_callbacks.c  annotation_window_callbacks.h  ardesia.c  ardesia.h  background_window.c  background_window.h  background_window_callbacks.c  background_window_callbacks.h  bar.c  bar.h  bar_callbacks.c  bar_callbacks.h  bezier_spline.c  bezier_spline.h  broken.c  broken.h  color_chooser.c  color_chooser.h  color_selector.c  color_selector.h  crash_dialog.c  crash_dialog.h  crash_dialog_callbacks.c  cursors.c  cursors.h  fill.c  fill.h  info_dialog.c  info_dialog.h  input.c  input.h  iwb_loader.c  iwb_loader.h  iwb_saver.c  iwb_saver.h  keyboard.c  keyboard.h  pdf_saver.c  (+22 more)
